# docker-vista

./: .dockerignore  .gitignore  Dockerfile.iris-ce  README.md
.github/workflows/: build-iris-ce.yml  cleanup-pr-images.yml
IRIS/ce/: ZSTU.m  compilertn.m  import.sh  importrtn.m  postinstall.m  seedoptions.m  seedpatients.m  seedusers.m  setup-namespace.m
tests/rpms-tests/: .gitignore  README.md  pyproject.toml
tests/rpms-tests/tests/: conftest.py  rpms-tests.code-workspace  test_authentication.py  test_clinical_data.py  test_connection.py  test_context.py  test_patients.py  test_rpcs.py  test_rpms_discovery.py
