[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rpms-tests"
version = "0.1.0"
description = "Pytest test suite for RPMS IRIS CE RPC broker"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
    "vista-clients @ git+https://github.com/CivicActions/vista-clients.git@027-rpms-image-tests",
    "pytest>=7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "rpms: tests requiring a live RPMS IRIS CE container",
]

[tool.hatch.build.targets.wheel]
packages = ["rpms_tests"]

[tool.ruff]
target-version = "py310"
line-length = 100
